# testes-ic

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
docker/: Dockerfile.dev  Dockerfile.prod
src/: main.py  tasks.py  worker.py
src/core/: config.py
src/core/security/: dependencies.py  jwt.py  oauth2.py  password.py
src/exceptions/: error_handler.py
src/jobs/: bdc_cron.py
src/models/: auth.py  base_model.py  bdc.py  coffee.py  enums.py  user.py  wtss.py
src/queues/: client.py
src/repos/: coffee_repo.py  user_repo.py
src/routers/: __init__.py  auth_router.py  coffee_router.py  user_router.py
src/services/: auth_service.py  coffee_service.py  stac_service.py  user_service.py  wtss_service.py
src/utils/: app_error.py  date_now.py  db.py  logging.py
src/workers/: wtss_worker.py
