[project]
name = "python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "apscheduler>=3.11.2",
    "argon2-cffi>=25.1.0",
    "celery[redis]>=5.6.2",
    "fastapi>=0.128.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pika>=1.3.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "pymongo>=4.16.0",
    "pystac-client>=0.9.0",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
    "wtss==2.0.0a3",
    "rasterio>=1.5.0",
    "setuptools<81",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
pythonpath = "src"
